# toerings

./: .eslintrc.cjs  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  renovate.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  clear-artifacts.yml  generate-pr19-lock.yml  publish.yml  validate-eslint-migration.yml  validate-import-lint.yml  windows-build.yml
scripts/: clean.mjs  repack-appimage.sh  validate-linux-bundles.sh
src/: App.svelte  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: data_harvester.rs  main.rs
src-tauri/src/data_harvester/: cpu.rs
src-tauri/src/data_harvester/cpu/: sysinfo.rs
src-tauri/src/data_harvester/memory/general/: sysinfo.rs
src-tauri/src/data_harvester/network/: sysinfo.rs
src-tauri/src/data_harvester/processes/: linux.rs  macos_freebsd.rs  windows.rs
src-tauri/src/data_harvester/temperature/: sysinfo.rs
src/components/: Arc.svelte  CPUWidget.svelte  DiskWidget.svelte  MemWidget.svelte  NetWidget.svelte  Preferences.svelte  ProcessList.svelte  SummaryWidget.svelte
src/lib/: actions.ts  i18n.ts  stores.ts
